[tool.poetry]
name = "finalproject_zakharina_dpo"
version = "0.1.0"
description = "Валютный кошелек с Parser Service для трейдинга"
authors = ["websterdable 258216809+websterdable@users.noreply.github.com"]

packages = [
    { include = "valutatrade_hub", from = "." },
    { include = "main.py", from = "." }
]


[tool.poetry.dependencies]
python = "^3.12"
prettytable = "^3.9.0"
requests = "^2.31.0"
tomli = "^2.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[tool.poetry.scripts]
project = "main:main"
wallet = "main:main" 

[tool.valutatrade]
data_dir = "data"
default_base_currency = "USD"
rates_ttl_seconds = 300
log_file = "logs/valutatrade.log"
parser_enabled = true
parser_interval_minutes = 15
coingecko_timeout = 10
exchangerate_timeout = 10

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__", "logs", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501", "B008"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"